fix: Unicode whitespace validation and admin REST API endpoint
Fixed 2 final critical issues from third code review:

**HIGH Priority:**
1. Unicode whitespace bypass in HtmlUtils.hasTextContent (line 36)
   - Problem: trim() only strips ASCII whitespace ≤0x20
   - Payloads like <p>&nbsp;</p>, zero-width spaces (U+200B) passed validation
   - Comments rendered blank but persisted in database
   - Fix: Replaced trim().isEmpty() with isBlank() for Unicode-aware checking
   - Also updated stripHtmlTags() to use strip() instead of trim()
   - Regression tests: 4 new tests covering &nbsp;, zero-width, and other Unicode spaces

**MEDIUM Priority:**
2. AdminIssueController JSON endpoint validation gap (line 93)
   - Problem: Admin REST API endpoint only had @Valid/@NotBlank
   - Admins using API directly could bypass UI validation
   - <p><br></p> and Unicode whitespace variants accepted
   - Fix: Added HtmlUtils.hasTextContent() check before service call
   - Consistent with user endpoints and admin UI validation
   - Regression tests: 7 comprehensive tests including Unicode variants

**Changes:**
Backend:
- src/main/java/org/sensorvision/util/HtmlUtils.java
  * Line 46: Replaced trim().isEmpty() with isBlank()
  * Line 62: Replaced trim() with strip()
  * Enhanced javadoc with Unicode whitespace examples
- src/main/java/org/sensorvision/controller/AdminIssueController.java
  * Line 102: Added HTML content validation to admin comment endpoint
- src/test/java/org/sensorvision/util/HtmlUtilsTest.java
  * Added 4 regression tests for Unicode whitespace
  * Tests cover: &nbsp;, zero-width spaces, thin spaces, ideographic spaces
  * Verifies rejection when Unicode whitespace is alone
  * Verifies acceptance when Unicode whitespace is within valid text
- src/test/java/org/sensorvision/controller/AdminIssueControllerTest.java
  * NEW: 7 regression tests for admin REST API validation
  * Tests Quill markup, ASCII whitespace, &nbsp;, zero-width spaces
  * Tests both public and inte