@@ -13,13 +13,21 @@ public class HtmlUtils {
      * This is critical for validating rich text editor content (like Quill)
      * which produces markup like {@code <p><br></p>} for empty editors.
      *
+     * <p>IMPORTANT: Uses Unicode-aware whitespace checking to handle:
+     * <ul>
+     *   <li>Non-breaking spaces (&amp;nbsp; / U+00A0)</li>
+     *   <li>Zero-width spaces (U+200B)</li>
+     *   <li>Other Unicode whitespace characters</li>
+     * </ul>
+     *
      * @param html The HTML string to validate
      * @return true if content has meaningful text, false if empty/whitespace-only
      *
      * <p>Examples:
      * <ul>
      *   <li>{@code hasTextContent("<p><br></p>")} returns {@code false} - Quill empty editor</li>
-     *   <li>{@code hasTextContent("<p>   </p>")} returns {@code false} - Only whitespace</li>
+     *   <li>{@code hasTextContent("<p>   </p>")} returns {@code false} - Only ASCII whitespace</li>
+     *   <li>{@code hasTextContent("<p>&nbsp;</p>")} returns {@code false} - Only non-breaking spaces</li>
      *   <li>{@code hasTextContent("<p>Hello</p>")} returns {@code true} - Has text</li>
      *   <li>{@code hasTextContent("<p><strong></strong></p>")} returns {@code false} - Only empty tags</li>
      * </ul>
@@ -32,8 +40,10 @@ public class HtmlUtils {
         // Use Jsoup to parse HTML and extract text content
         String textContent = Jsoup.parse(html).text();
 
-        // Check if there's any non-whitespace text
-        return textContent != null && !textContent.trim().isEmpty();
+        // CRITICAL: Use isBlank() instead of trim().isEmpty()
+        // isBlank() handles Unicode whitespace (nbsp, zero-width spaces, etc.)
+        // trim() only handles ASCII whitespace ≤0x20
+        return textContent != null && !textContent.isBlank();
     }
 
     /**
@@ -41,13 +51,14 @@ public class HtmlUtils {
      * Useful for validation and length checks.
      *
      * @param html The HTML string to strip
-     * @return Plain text content without HTML tags
+     * @return Plain text content without HTML tags, with Unicode whitespace stripped
      */
     public static String stripHtmlTags(String html) {
         if (html == null || html.isEmpty()) {
             return "";
         }
 
-        return Jsoup.parse(html).text().trim();
+        // Use strip() instead of trim() for Unicode-aware whitespace removal
+        return Jsoup.parse(html).text().strip();
     }
 }
